--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "cheerio": "^0.22.0",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^4.0.0-beta.4",
+    "html-webpack-plugin": "^3.2.0",
     "jasmine": "^2.4.1",
     "rimraf": "^2.5.2",
     "semistandard": "^7.0.5",
